TorrentService logic updated.

--- a/app/layout.html
+++ b/app/layout.html
@@ -1,5 +1,5 @@
-<eeh-navigation-navbar menu-name="'navbar'" brand-text="'Transmissionbt Web Interface'"></eeh-navigation-navbar>
-<eeh-navigation-sidebar menu-name="'sidebar'">
+<eeh-navigation-navbar menu-name="'navbar'" nav-class="'navbar navbar-inverted navbar-static-top'" brand-text="'Transmissionbt Web Interface'"></eeh-navigation-navbar>
+<eeh-navigation-sidebar search-input-is-visible="true" nav-class="'navbar-inverted'" menu-name="'sidebar'">
     <ui-view></ui-view>    
 </eeh-navigation-sidebar>
 
