--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
 		<link rel="stylesheet" href="../assets/css/font-awesome/less/font-awesome.css" type="text/css" />
 	
 		<link rel="stylesheet" href="../assets/libs/eeh-navigation/eeh-navigation.css" />
+		
+		<link rel="stylesheet" href="../assets/css/theme.css">
 	
 		<script src="../assets/libs/jquery/jquery.min.js"></script>
 		<script src="../assets/libs/angular/angular.js"></script>
