--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="../assets/css/ui-bootstrap-csp.css" type="text/css" />
 		<link rel="stylesheet" href="../assets/css/bootstrap/bootstrap.css" type="text/css" />
 		<link rel="stylesheet" href="../assets/css/ui-grid/ui-grid.css" type="text/css" />
-		<link rel="stylesheet" href="../assets/css/font-awesome/less/font-awesome.css" type="text/css" />
+		<link rel="stylesheet" href="../assets/css/font-awesome/css/font-awesome.css" type="text/css" />
 	
 		<link rel="stylesheet" href="../assets/libs/eeh-navigation/eeh-navigation.css" />
 		
@@ -23,6 +23,7 @@
 	
 		<script src="../assets/libs/eeh-navigation/eeh-navigation.min.js"></script>
 		<script src="../assets/libs/eeh-navigation/eeh-navigation.tpl.min.js"></script>
+		<script src="../assets/libs/ng-context-menu/ng-context-menu.js"></script>
 			
 		<script src="core.js"></script>
 		
